# philograph-mcp

./: .env.example  .gitignore  ACTIVITY_LOG.md  CHANGELOG.md  CLAUDE.md  FEEDBACK_LOG.md  PROJECT_STATUS.md  SELF_ANALYSIS_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLAUDE_CODE_SYSTEM_BOOTSTRAP.md  DEVELOPMENT_GUIDE.md  phil-rag-architecture.md  phil-rag-citation-notes.md  phil-rag-executive-summary.md  phil-rag-implementation.md  phil-rag-user-stories.md
src/core/embeddings/: __init__.py  embedding_models.py  vertex_ai_service.py
src/infrastructure/database/: connection.py  models.py
src/mcp_server/: server.py
src/mcp_server/prompts/: research_prompts.py
src/mcp_server/resources/: document_resources.py  note_resources.py
src/mcp_server/tools/: analysis_tools.py  citation_tools.py  search_tools.py
tests/: conftest.py
tests/unit/: test_connection_unit.py  test_database_connection.py  test_database_models.py  test_embedding_models_unit.py  test_mcp_server.py  test_mcp_server_unit.py  test_models_unit.py  test_vertex_ai_service_unit.py
